Enhance on-the-fly parallel processing